k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskly-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskly-backend
  template:
    metadata:
      labels:
        app: taskly-backend
    spec:
      containers:
      - name: flask-backend
        image: oshithroshantha/taskly-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
