k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskly-backend-service
spec:
  selector:
    app: taskly-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
